# rust-ressources-editor

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  package-lock.json
assets/: main.css  tailwind.css
src/: main.rs
src/components/: editor.rs  mainview.rs  menu.rs  mod.rs
src/components/layouts/: navbar.rs
src/components/ui/: button.rs
src/data/: loader.rs
src/ressources/: mod.rs
src/ressources/dialog_tree/: dialog_tree_node.rs  mod.rs
src/serialization/: loader.rs
